add non-parametric test

--- a/notebooks/statistical_test.ipynb
+++ b/notebooks/statistical_test.ipynb
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,6 +664,7 @@
     "    # Prepare the data in the format required for the Friedman test\n",
     "    # Each model's metric scores should be passed as a separate argument\n",
     "    scores = [metric_scores[model_name] for model_name in metric_scores]\n",
+    "    print(scores)\n",
     "    \n",
     "    # Perform the Friedman test\n",
     "    stat, p_value = friedmanchisquare(*scores)\n",
@@ -682,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -690,36 +691,42 @@
      "output_type": "stream",
      "text": [
       "{'catboost': [0.8545454545454545, 0.8909090909090909, 0.9090909090909091, 0.8703703703703703, 0.8703703703703703], 'xgboost': [0.7818181818181819, 0.9090909090909091, 0.9454545454545454, 0.8333333333333334, 0.8518518518518519], 'lgbm': [0.8, 0.9272727272727272, 0.9090909090909091, 0.8888888888888888, 0.8703703703703703], 'rf': [0.8, 0.8909090909090909, 0.8363636363636363, 0.8518518518518519, 0.8148148148148148], 'svm': [0.8, 0.8909090909090909, 0.8181818181818182, 0.7592592592592593, 0.8148148148148148], 'lr': [0.7636363636363637, 0.8727272727272727, 0.8181818181818182, 0.7962962962962963, 0.8148148148148148]}\n",
+      "[[0.8545454545454545, 0.8909090909090909, 0.9090909090909091, 0.8703703703703703, 0.8703703703703703], [0.7818181818181819, 0.9090909090909091, 0.9454545454545454, 0.8333333333333334, 0.8518518518518519], [0.8, 0.9272727272727272, 0.9090909090909091, 0.8888888888888888, 0.8703703703703703], [0.8, 0.8909090909090909, 0.8363636363636363, 0.8518518518518519, 0.8148148148148148], [0.8, 0.8909090909090909, 0.8181818181818182, 0.7592592592592593, 0.8148148148148148], [0.7636363636363637, 0.8727272727272727, 0.8181818181818182, 0.7962962962962963, 0.8148148148148148]]\n",
       "Friedman test result for accuracy:\n",
       "Test Statistic: 16.187499999999996\n",
       "P-Value: 0.00632865051737763\n",
       "The differences in accuracy between models are statistically significant.\n",
       "\n",
       "{'catboost': [0.8986666666666666, 0.9520000000000001, 0.9466666666666665, 0.9241379310344827, 0.9475862068965518], 'xgboost': [0.8746666666666667, 0.9506666666666668, 0.9586666666666667, 0.8813793103448276, 0.9448275862068966], 'lgbm': [0.8786666666666667, 0.9586666666666667, 0.9373333333333334, 0.88, 0.9351724137931035], 'rf': [0.884, 0.9480000000000001, 0.92, 0.8979310344827587, 0.9186206896551724], 'svm': [0.8866666666666667, 0.9413333333333334, 0.904, 0.8593103448275863, 0.9144827586206896], 'lr': [0.864, 0.9306666666666666, 0.9026666666666666, 0.8606896551724138, 0.9048275862068966]}\n",
+      "[[0.8986666666666666, 0.9520000000000001, 0.9466666666666665, 0.9241379310344827, 0.9475862068965518], [0.8746666666666667, 0.9506666666666668, 0.9586666666666667, 0.8813793103448276, 0.9448275862068966], [0.8786666666666667, 0.9586666666666667, 0.9373333333333334, 0.88, 0.9351724137931035], [0.884, 0.9480000000000001, 0.92, 0.8979310344827587, 0.9186206896551724], [0.8866666666666667, 0.9413333333333334, 0.904, 0.8593103448275863, 0.9144827586206896], [0.864, 0.9306666666666666, 0.9026666666666666, 0.8606896551724138, 0.9048275862068966]]\n",
       "Friedman test result for roc_auc:\n",
       "Test Statistic: 16.65714285714286\n",
       "P-Value: 0.005198098170259067\n",
       "The differences in roc_auc between models are statistically significant.\n",
       "\n",
       "{'catboost': [0.8333333333333334, 0.8846153846153846, 0.8979591836734694, 0.8679245283018868, 0.851063829787234], 'xgboost': [0.7391304347826086, 0.9019607843137255, 0.9387755102040817, 0.8301886792452831, 0.84], 'lgbm': [0.7659574468085106, 0.92, 0.9019607843137255, 0.8846153846153846, 0.8571428571428571], 'rf': [0.7755102040816326, 0.8888888888888888, 0.8235294117647058, 0.8518518518518519, 0.8], 'svm': [0.7755102040816326, 0.8846153846153846, 0.8076923076923077, 0.7346938775510204, 0.8076923076923077], 'lr': [0.7346938775510204, 0.8571428571428571, 0.8, 0.7659574468085106, 0.8076923076923077]}\n",
+      "[[0.8333333333333334, 0.8846153846153846, 0.8979591836734694, 0.8679245283018868, 0.851063829787234], [0.7391304347826086, 0.9019607843137255, 0.9387755102040817, 0.8301886792452831, 0.84], [0.7659574468085106, 0.92, 0.9019607843137255, 0.8846153846153846, 0.8571428571428571], [0.7755102040816326, 0.8888888888888888, 0.8235294117647058, 0.8518518518518519, 0.8], [0.7755102040816326, 0.8846153846153846, 0.8076923076923077, 0.7346938775510204, 0.8076923076923077], [0.7346938775510204, 0.8571428571428571, 0.8, 0.7659574468085106, 0.8076923076923077]]\n",
       "Friedman test result for f1_score:\n",
       "Test Statistic: 13.343023255813954\n",
       "P-Value: 0.02036779163580134\n",
       "The differences in f1_score between models are statistically significant.\n",
       "\n",
       "{'catboost': [0.8695652173913043, 0.8518518518518519, 0.9166666666666666, 0.8214285714285714, 0.9090909090909091], 'xgboost': [0.8095238095238095, 0.8846153846153846, 0.9583333333333334, 0.7857142857142857, 0.84], 'lgbm': [0.8181818181818182, 0.92, 0.8846153846153846, 0.8518518518518519, 0.875], 'rf': [0.7916666666666666, 0.8275862068965517, 0.8076923076923077, 0.7931034482758621, 0.8], 'svm': [0.7916666666666666, 0.8518518518518519, 0.7777777777777778, 0.75, 0.7777777777777778], 'lr': [0.75, 0.875, 0.8, 0.8181818181818182, 0.7777777777777778]}\n",
+      "[[0.8695652173913043, 0.8518518518518519, 0.9166666666666666, 0.8214285714285714, 0.9090909090909091], [0.8095238095238095, 0.8846153846153846, 0.9583333333333334, 0.7857142857142857, 0.84], [0.8181818181818182, 0.92, 0.8846153846153846, 0.8518518518518519, 0.875], [0.7916666666666666, 0.8275862068965517, 0.8076923076923077, 0.7931034482758621, 0.8], [0.7916666666666666, 0.8518518518518519, 0.7777777777777778, 0.75, 0.7777777777777778], [0.75, 0.875, 0.8, 0.8181818181818182, 0.7777777777777778]]\n",
       "Friedman test result for precision:\n",
       "Test Statistic: 15.377906976744185\n",
       "P-Value: 0.008863946356156603\n",
       "The differences in precision between models are statistically significant.\n",
       "\n",
       "{'catboost': [0.8, 0.92, 0.88, 0.92, 0.8], 'xgboost': [0.68, 0.92, 0.92, 0.88, 0.84], 'lgbm': [0.72, 0.92, 0.92, 0.92, 0.84], 'rf': [0.76, 0.96, 0.84, 0.92, 0.8], 'svm': [0.76, 0.92, 0.84, 0.72, 0.84], 'lr': [0.72, 0.84, 0.8, 0.72, 0.84]}\n",
+      "[[0.8, 0.92, 0.88, 0.92, 0.8], [0.68, 0.92, 0.92, 0.88, 0.84], [0.72, 0.92, 0.92, 0.92, 0.84], [0.76, 0.96, 0.84, 0.92, 0.8], [0.76, 0.92, 0.84, 0.72, 0.84], [0.72, 0.84, 0.8, 0.72, 0.84]]\n",
       "Friedman test result for recall:\n",
       "Test Statistic: 4.999999999999996\n",
       "P-Value: 0.41588018699550844\n",
       "No significant differences in recall between models were found.\n",
       "\n",
       "{'catboost': [0.9, 0.8666666666666667, 0.9333333333333333, 0.8275862068965517, 0.9310344827586207], 'xgboost': [0.8666666666666667, 0.9, 0.9666666666666667, 0.7931034482758621, 0.8620689655172413], 'lgbm': [0.8666666666666667, 0.9333333333333333, 0.9, 0.8620689655172413, 0.896551724137931], 'rf': [0.8333333333333334, 0.8333333333333334, 0.8333333333333334, 0.7931034482758621, 0.8275862068965517], 'svm': [0.8333333333333334, 0.8666666666666667, 0.8, 0.7931034482758621, 0.7931034482758621], 'lr': [0.8, 0.9, 0.8333333333333334, 0.8620689655172413, 0.7931034482758621]}\n",
+      "[[0.9, 0.8666666666666667, 0.9333333333333333, 0.8275862068965517, 0.9310344827586207], [0.8666666666666667, 0.9, 0.9666666666666667, 0.7931034482758621, 0.8620689655172413], [0.8666666666666667, 0.9333333333333333, 0.9, 0.8620689655172413, 0.896551724137931], [0.8333333333333334, 0.8333333333333334, 0.8333333333333334, 0.7931034482758621, 0.8275862068965517], [0.8333333333333334, 0.8666666666666667, 0.8, 0.7931034482758621, 0.7931034482758621], [0.8, 0.9, 0.8333333333333334, 0.8620689655172413, 0.7931034482758621]]\n",
       "Friedman test result for specificity:\n",
       "Test Statistic: 13.23170731707316\n",
       "P-Value: 0.021301521953202084\n",
@@ -733,6 +740,146 @@
     "\n",
     "for metric_name in metrics_to_analyze:\n",
     "    perform_friedman_test(metrics_dict, metric_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.stats import rankdata\n",
+    "from scikit_posthocs import posthoc_nemenyi_friedman\n",
+    "\n",
+    "def identify_different_models(metrics_dict, metric_name):\n",
+    "    # Extract metric scores for all models\n",
+    "    metric_scores = extract_metric_scores(metrics_dict, metric_name)\n",
+    "    \n",
+    "    # Prepare the data in the format required for the Friedman test\n",
+    "    scores = np.array([metric_scores[model_name] for model_name in metric_scores])\n",
+    "\n",
+    "    # Perform the Friedman test\n",
+    "    stat, p_value = friedmanchisquare(*scores)\n",
+    "    \n",
+    "    print(f\"Friedman test result for {metric_name}:\")\n",
+    "    print(f\"Test Statistic: {stat}\")\n",
+    "    print(f\"P-Value: {p_value}\")\n",
+    "    \n",
+    "    if p_value < 0.05:\n",
+    "        print(f\"The differences in {metric_name} between models are statistically significant.\")\n",
+    "        \n",
+    "        # Perform the Nemenyi post-hoc test\n",
+    "        nemenyi_results = posthoc_nemenyi_friedman(scores.T)\n",
+    "        \n",
+    "        print(\"\\nNemenyi post-hoc test results:\")\n",
+    "        print(nemenyi_results)\n",
+    "        \n",
+    "        # Highlight significant differences\n",
+    "        significant_pairs = np.where(nemenyi_results < 0.05)\n",
+    "        for i in range(len(significant_pairs[0])):\n",
+    "            model1 = list(metric_scores.keys())[significant_pairs[0][i]]\n",
+    "            model2 = list(metric_scores.keys())[significant_pairs[1][i]]\n",
+    "            print(f\"Significant difference between {model1} and {model2}\")\n",
+    "        \n",
+    "    else:\n",
+    "        print(f\"No significant differences in {metric_name} between models were found.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Friedman test result for accuracy:\n",
+      "Test Statistic: 16.187499999999996\n",
+      "P-Value: 0.00632865051737763\n",
+      "The differences in accuracy between models are statistically significant.\n",
+      "\n",
+      "Nemenyi post-hoc test results:\n",
+      "          0         1         2         3         4         5\n",
+      "0  1.000000  0.900000  0.900000  0.727962  0.280498  0.059278\n",
+      "1  0.900000  1.000000  0.900000  0.900000  0.679147  0.280498\n",
+      "2  0.900000  0.900000  1.000000  0.532706  0.138788  0.021823\n",
+      "3  0.727962  0.900000  0.532706  1.000000  0.900000  0.679147\n",
+      "4  0.280498  0.679147  0.138788  0.900000  1.000000  0.900000\n",
+      "5  0.059278  0.280498  0.021823  0.679147  0.900000  1.000000\n",
+      "Significant difference between lgbm and lr\n",
+      "Significant difference between lr and lgbm\n",
+      "Friedman test result for roc_auc:\n",
+      "Test Statistic: 16.65714285714286\n",
+      "P-Value: 0.005198098170259067\n",
+      "The differences in roc_auc between models are statistically significant.\n",
+      "\n",
+      "Nemenyi post-hoc test results:\n",
+      "          0         1         2         3         4         5\n",
+      "0  1.000000  0.825589  0.727962  0.532706  0.074521  0.002751\n",
+      "1  0.825589  1.000000  0.900000  0.900000  0.630333  0.114066\n",
+      "2  0.727962  0.900000  1.000000  0.900000  0.727962  0.168277\n",
+      "3  0.532706  0.900000  0.900000  1.000000  0.900000  0.325848\n",
+      "4  0.074521  0.630333  0.727962  0.900000  1.000000  0.900000\n",
+      "5  0.002751  0.114066  0.168277  0.325848  0.900000  1.000000\n",
+      "Significant difference between catboost and lr\n",
+      "Significant difference between lr and catboost\n",
+      "Friedman test result for f1_score:\n",
+      "Test Statistic: 13.343023255813954\n",
+      "P-Value: 0.02036779163580134\n",
+      "The differences in f1_score between models are statistically significant.\n",
+      "\n",
+      "Nemenyi post-hoc test results:\n",
+      "          0         1         2         3         4         5\n",
+      "0  1.000000  0.900000  0.900000  0.900000  0.532706  0.114066\n",
+      "1  0.900000  1.000000  0.900000  0.900000  0.776774  0.280498\n",
+      "2  0.900000  0.900000  1.000000  0.581521  0.201286  0.021823\n",
+      "3  0.900000  0.900000  0.581521  1.000000  0.900000  0.630333\n",
+      "4  0.532706  0.776774  0.201286  0.900000  1.000000  0.900000\n",
+      "5  0.114066  0.280498  0.021823  0.630333  0.900000  1.000000\n",
+      "Significant difference between lgbm and lr\n",
+      "Significant difference between lr and lgbm\n",
+      "Friedman test result for precision:\n",
+      "Test Statistic: 15.377906976744185\n",
+      "P-Value: 0.008863946356156603\n",
+      "The differences in precision between models are statistically significant.\n",
+      "\n",
+      "Nemenyi post-hoc test results:\n",
+      "          0         1         2         3         4         5\n",
+      "0  1.000000  0.900000  0.900000  0.325848  0.074521  0.325848\n",
+      "1  0.900000  1.000000  0.900000  0.679147  0.280498  0.679147\n",
+      "2  0.900000  0.900000  1.000000  0.201286  0.036601  0.201286\n",
+      "3  0.325848  0.679147  0.201286  1.000000  0.900000  0.900000\n",
+      "4  0.074521  0.280498  0.036601  0.900000  1.000000  0.900000\n",
+      "5  0.325848  0.679147  0.201286  0.900000  0.900000  1.000000\n",
+      "Significant difference between lgbm and svm\n",
+      "Significant difference between svm and lgbm\n",
+      "Friedman test result for recall:\n",
+      "Test Statistic: 4.999999999999996\n",
+      "P-Value: 0.41588018699550844\n",
+      "No significant differences in recall between models were found.\n",
+      "Friedman test result for specificity:\n",
+      "Test Statistic: 13.23170731707316\n",
+      "P-Value: 0.021301521953202084\n",
+      "The differences in specificity between models are statistically significant.\n",
+      "\n",
+      "Nemenyi post-hoc test results:\n",
+      "          0         1         2         3         4         5\n",
+      "0  1.000000  0.900000  0.900000  0.280498  0.168277  0.679147\n",
+      "1  0.900000  1.000000  0.900000  0.532706  0.376391  0.900000\n",
+      "2  0.900000  0.900000  1.000000  0.168277  0.092236  0.532706\n",
+      "3  0.280498  0.532706  0.168277  1.000000  0.900000  0.900000\n",
+      "4  0.168277  0.376391  0.092236  0.900000  1.000000  0.900000\n",
+      "5  0.679147  0.900000  0.532706  0.900000  0.900000  1.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "metrics_to_analyze = ['accuracy', 'roc_auc', 'f1_score', 'precision', 'recall', 'specificity']\n",
+    "\n",
+    "for metric_name in metrics_to_analyze:\n",
+    "    identify_different_models(metrics_dict, metric_name)"
    ]
   },
   {
