remove statistical test for SHAP values

--- a/notebooks/statistical_test.ipynb
+++ b/notebooks/statistical_test.ipynb
@@ -15,7 +15,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import scipy.stats as stats\n",
-    "from scipy.stats import friedmanchisquare\n",
     "from scikit_posthocs import posthoc_nemenyi_friedman\n",
     "\n",
     "import seaborn as sns\n",
@@ -451,14 +450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Statistical tests"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.1. Comparing Model Performance"
+    "## 2. Comparing Model Performance"
    ]
   },
   {
@@ -479,7 +471,7 @@
     "    scores = [metric_scores[model_name] for model_name in metric_scores]\n",
     "    \n",
     "    # Perform the Friedman test\n",
-    "    stat, p_value = friedmanchisquare(*scores)\n",
+    "    stat, p_value = stats.friedmanchisquare(*scores)\n",
     "    \n",
     "    # Print the result\n",
     "    print(f\"Friedman test result for {metric_name}:\")\n",
@@ -504,21 +496,33 @@
      "output_type": "stream",
      "text": [
       "Friedman test result for accuracy:\n",
+      "Test Statistic: 16.187499999999996\n",
+      "P-Value: 0.00632865051737763\n",
       "Significant differences\n",
       "\n",
       "Friedman test result for roc_auc:\n",
+      "Test Statistic: 16.65714285714286\n",
+      "P-Value: 0.005198098170259067\n",
       "Significant differences\n",
       "\n",
       "Friedman test result for f1_score:\n",
+      "Test Statistic: 13.343023255813954\n",
+      "P-Value: 0.02036779163580134\n",
       "Significant differences\n",
       "\n",
       "Friedman test result for precision:\n",
+      "Test Statistic: 15.377906976744185\n",
+      "P-Value: 0.008863946356156603\n",
       "Significant differences\n",
       "\n",
       "Friedman test result for recall:\n",
+      "Test Statistic: 4.999999999999996\n",
+      "P-Value: 0.41588018699550844\n",
       "No significant differences\n",
       "\n",
       "Friedman test result for specificity:\n",
+      "Test Statistic: 13.23170731707316\n",
+      "P-Value: 0.021301521953202084\n",
       "Significant differences\n",
       "\n"
      ]
@@ -528,7 +532,7 @@
     "metrics_to_analyze = ['accuracy', 'roc_auc', 'f1_score', 'precision', 'recall', 'specificity']\n",
     "\n",
     "for metric_name in metrics_to_analyze:\n",
-    "    perform_friedman_test(metrics_dict, metric_name)"
+    "    perform_friedman_test(metrics_dict, metric_name, verbose=1)"
    ]
   },
   {
@@ -568,6 +572,13 @@
      "text": [
       "\n",
       "Nemenyi post-hoc test results for accuracy:\n",
+      "          0         1         2         3         4         5\n",
+      "0  1.000000  0.900000  0.900000  0.727962  0.280498  0.059278\n",
+      "1  0.900000  1.000000  0.900000  0.900000  0.679147  0.280498\n",
+      "2  0.900000  0.900000  1.000000  0.532706  0.138788  0.021823\n",
+      "3  0.727962  0.900000  0.532706  1.000000  0.900000  0.679147\n",
+      "4  0.280498  0.679147  0.138788  0.900000  1.000000  0.900000\n",
+      "5  0.059278  0.280498  0.021823  0.679147  0.900000  1.000000\n",
       "Nemenyi post-hoc test found significant differences between lgbm and lr\n",
       "Nemenyi post-hoc test found significant differences between lr and lgbm\n",
       "\n"
@@ -579,21 +590,49 @@
      "text": [
       "\n",
       "Nemenyi post-hoc test results for roc_auc:\n",
+      "          0         1         2         3         4         5\n",
+      "0  1.000000  0.825589  0.727962  0.532706  0.074521  0.002751\n",
+      "1  0.825589  1.000000  0.900000  0.900000  0.630333  0.114066\n",
+      "2  0.727962  0.900000  1.000000  0.900000  0.727962  0.168277\n",
+      "3  0.532706  0.900000  0.900000  1.000000  0.900000  0.325848\n",
+      "4  0.074521  0.630333  0.727962  0.900000  1.000000  0.900000\n",
+      "5  0.002751  0.114066  0.168277  0.325848  0.900000  1.000000\n",
       "Nemenyi post-hoc test found significant differences between catboost and lr\n",
       "Nemenyi post-hoc test found significant differences between lr and catboost\n",
       "\n",
       "\n",
       "Nemenyi post-hoc test results for f1_score:\n",
+      "          0         1         2         3         4         5\n",
+      "0  1.000000  0.900000  0.900000  0.900000  0.532706  0.114066\n",
+      "1  0.900000  1.000000  0.900000  0.900000  0.776774  0.280498\n",
+      "2  0.900000  0.900000  1.000000  0.581521  0.201286  0.021823\n",
+      "3  0.900000  0.900000  0.581521  1.000000  0.900000  0.630333\n",
+      "4  0.532706  0.776774  0.201286  0.900000  1.000000  0.900000\n",
+      "5  0.114066  0.280498  0.021823  0.630333  0.900000  1.000000\n",
       "Nemenyi post-hoc test found significant differences between lgbm and lr\n",
       "Nemenyi post-hoc test found significant differences between lr and lgbm\n",
       "\n",
       "\n",
       "Nemenyi post-hoc test results for precision:\n",
+      "          0         1         2         3         4         5\n",
+      "0  1.000000  0.900000  0.900000  0.325848  0.074521  0.325848\n",
+      "1  0.900000  1.000000  0.900000  0.679147  0.280498  0.679147\n",
+      "2  0.900000  0.900000  1.000000  0.201286  0.036601  0.201286\n",
+      "3  0.325848  0.679147  0.201286  1.000000  0.900000  0.900000\n",
+      "4  0.074521  0.280498  0.036601  0.900000  1.000000  0.900000\n",
+      "5  0.325848  0.679147  0.201286  0.900000  0.900000  1.000000\n",
       "Nemenyi post-hoc test found significant differences between lgbm and svm\n",
       "Nemenyi post-hoc test found significant differences between svm and lgbm\n",
       "\n",
       "\n",
       "Nemenyi post-hoc test results for specificity:\n",
+      "          0         1         2         3         4         5\n",
+      "0  1.000000  0.900000  0.900000  0.280498  0.168277  0.679147\n",
+      "1  0.900000  1.000000  0.900000  0.532706  0.376391  0.900000\n",
+      "2  0.900000  0.900000  1.000000  0.168277  0.092236  0.532706\n",
+      "3  0.280498  0.532706  0.168277  1.000000  0.900000  0.900000\n",
+      "4  0.168277  0.376391  0.092236  0.900000  1.000000  0.900000\n",
+      "5  0.679147  0.900000  0.532706  0.900000  0.900000  1.000000\n",
       "\n"
      ]
     }
@@ -602,32 +641,7 @@
     "metrics_to_analyze = ['accuracy', 'roc_auc', 'f1_score', 'precision', 'specificity']\n",
     "\n",
     "for metric_name in metrics_to_analyze:\n",
-    "    identify_different_models(metrics_dict, metric_name, verbose=0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.2. Comparing the Impact of Features Using SHAP Values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6 5 (54, 20)\n"
-     ]
-    }
-   ],
-   "source": [
-    "shap_values = load_pickle(paths.get('shap_values_path'))\n",
-    "print(len(shap_values), len(shap_values['catboost']), shap_values['catboost'][0].shape)"
+    "    identify_different_models(metrics_dict, metric_name, verbose=1)"
    ]
   },
   {
