add explain2 notebook

--- a/notebooks/explain2.ipynb
+++ b/notebooks/explain2.ipynb
@@ -8,17 +8,18 @@
    "source": [
     "import sys\n",
     "import os\n",
+    "import shap\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib\n",
+    "\n",
+    "# Set the font family for matplotlib\n",
+    "matplotlib.rcParams[\"font.family\"] = ['serif']\n",
     "\n",
     "# Add the parent directory to the sys.path to avoid 'ModuleNotFoundError'\n",
     "sys.path.append(os.path.abspath(os.path.join('..')))\n",
     "\n",
-    "import shap\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "import matplotlib\n",
-    "matplotlib.rcParams[\"font.family\"] = ['serif']\n",
-    "\n",
+    "# Import custom modules\n",
     "from src.preprocessing import *\n",
     "from src.visualization import *\n",
     "from src.trainer import *\n",
@@ -36,6 +37,7 @@
     "# Load data\n",
     "X_train_list = [pd.read_csv(path) for path in paths.get('X_train_paths')]\n",
     "y_train_list = [pd.read_csv(path) for path in paths.get('y_train_paths')]\n",
+    "\n",
     "X_val_list   = [pd.read_csv(path) for path in paths.get('X_val_paths')]\n",
     "y_val_list   = [pd.read_csv(path) for path in paths.get('y_val_paths')]\n",
     "\n",
@@ -45,9 +47,7 @@
     "feature_names = X_train_list[0].columns.to_list()\n",
     "\n",
     "# Concat y_val_list into a sigle list\n",
-    "y_val_agg = []\n",
-    "for i in range(5):\n",
-    "    y_val_agg.extend(y_val_list[i])\n",
+    "y_val_agg = concatenate_lists(y_val_list)\n",
     "\n",
     "# Load trained models of 5 folds\n",
     "models = {}\n",
@@ -59,70 +59,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get SHAP values and SHAP interaction values for each model\n",
-    "# Then save them in JSON files\n",
-    "for model_name in MODEL_NAMES:\n",
-    "    sv_allfolds = []\n",
-    "    iv_allfolds = []\n",
+    "class ShapValuesCalculator:\n",
+    "    def __init__(self, trained_models):\n",
+    "        self.trained_models = trained_models\n",
     "\n",
-    "    # For each model fold, get SHAP values and SHAP interaction values\n",
-    "    for fold, (X_train, X_val) in enumerate(zip(X_train_list, X_val_list)):\n",
-    "        # Tree-baed models\n",
-    "        if model_name in ['catboost', 'xgboost', 'lgbm', 'rf']:\n",
-    "            explainer = shap.TreeExplainer(\n",
-    "                model=models[model_name][fold],\n",
-    "                model_output='raw',\n",
-    "                feature_perturbation='tree_path_dependent',\n",
-    "            )\n",
-    "            sv = explainer.shap_values(X_val)\n",
-    "            iv = explainer.shap_interaction_values(X_val)\n",
-    "            \n",
-    "            if model_name == 'rf':\n",
-    "                # SHAP values for rf will be return for both class 0 and 1.\n",
-    "                # This will add an extra dim. For example: (55, 20) -> (55, 20, 2)\n",
-    "                # Therefore, to make all shapes consistent, only extract SHAP values for class 1\n",
-    "                sv = explainer.shap_values(X_val)[...,1]\n",
-    "                iv = explainer.shap_interaction_values(X_val)[..., 1]\n",
+    "    def calculate_shap_values_tree_based(self, model_name, fold_index, X_val):\n",
+    "        explainer = shap.TreeExplainer(\n",
+    "            model=self.trained_models[model_name][fold_index],\n",
+    "            model_output='raw',\n",
+    "            feature_perturbation='tree_path_dependent',\n",
+    "        )\n",
+    "        shap_values = explainer.shap_values(X_val)\n",
+    "        interaction_values = explainer.shap_interaction_values(X_val)\n",
     "\n",
-    "            sv_allfolds.extend(sv.tolist())\n",
-    "            iv_allfolds.extend(iv.tolist())\n",
+    "        # SHAP values for Random Forest will be returned for both class 0 and 1.\n",
+    "        # To make all shapes consistent, only extract SHAP values for class 1.\n",
+    "        if model_name == 'rf':\n",
+    "            shap_values = shap_values[..., 1]\n",
+    "            interaction_values = interaction_values[..., 1]\n",
     "\n",
-    "        # Logistic Regression\n",
-    "        if model_name == 'lr':\n",
-    "            explainer = shap.LinearExplainer(\n",
-    "                model=models[model_name][fold],\n",
-    "                masker=X_train,\n",
-    "                model_output='raw',\n",
-    "                feature_perturbation='correlation_dependent',\n",
-    "            )\n",
-    "            sv = explainer.shap_values(X_val)\n",
-    "            # LinearExplainer does not support interaction values\n",
+    "        return shap_values.tolist(), interaction_values.tolist()\n",
     "\n",
-    "        # SVM\n",
-    "        # if model_name == 'svm':\n",
-    "        #     model = models[model_name][fold]\n",
-    "        #     f = lambda x: model.predict_proba(x)[:,1]\n",
-    "        #     explainer = shap.KernelExplainer(\n",
-    "        #         model=f,\n",
-    "        #         data=X_train,\n",
-    "        #         nsamples='auto'\n",
-    "        #     )\n",
-    "        #     sv = explainer.shap_values(X_val)\n",
-    "        #     # KernelExplainer does not support interaction values\n",
+    "    def calculate_shap_values_linear(self, model_name, fold_index, X_train, X_val):\n",
+    "        explainer = shap.LinearExplainer(\n",
+    "            model=self.trained_models[model_name][fold_index],\n",
+    "            masker=X_train,\n",
+    "            model_output='raw',\n",
+    "            feature_perturbation='correlation_dependent',\n",
+    "        )\n",
+    "        shap_values = explainer.shap_values(X_val)\n",
+    "        return shap_values.tolist(), None\n",
     "\n",
-    "    # Save SHAP values and SHAP interaction values for this model to csv files\n",
-    "    save_json(paths[model_name]['sv'], sv_allfolds)\n",
-    "    if len(iv_allfolds) > 0:\n",
-    "        save_json(paths[model_name]['iv'], iv_allfolds)"
+    "    def calculate_shap_values_svm(self, model_name, fold_index, X_train, X_val):\n",
+    "        model = self.trained_models[model_name][fold_index]\n",
+    "        predict_function = lambda x: model.predict_proba(x)[:, 1]\n",
+    "        explainer = shap.KernelExplainer(\n",
+    "            model=predict_function,\n",
+    "            data=X_train,\n",
+    "            nsamples='auto'\n",
+    "        )\n",
+    "        shap_values = explainer.shap_values(X_val)\n",
+    "        return shap_values.tolist(), None\n",
+    "\n",
+    "    def process_and_save_shap_values(self, X_train_list, X_val_list, save_paths):\n",
+    "        for model_name in MODEL_NAMES:\n",
+    "            shap_values_list = []\n",
+    "            interaction_values_list = []\n",
+    "\n",
+    "            for fold_index, (X_train, X_val) in enumerate(zip(X_train_list, X_val_list)):\n",
+    "                if model_name in ['catboost', 'xgboost', 'lgbm', 'rf']:\n",
+    "                    shap_values, interaction_values = self.calculate_shap_values_tree_based(model_name, fold_index, X_val)\n",
+    "                elif model_name == 'lr':\n",
+    "                    shap_values, _ = self.calculate_shap_values_linear(model_name, fold_index, X_train, X_val)\n",
+    "                    interaction_values = None\n",
+    "                elif model_name == 'svm':\n",
+    "                    shap_values, _ = self.calculate_shap_values_svm(model_name, fold_index, X_train, X_val)\n",
+    "                    interaction_values = None\n",
+    "                else:\n",
+    "                    continue\n",
+    "\n",
+    "                if shap_values is not None:\n",
+    "                    shap_values_list.append(shap_values)\n",
+    "                if interaction_values is not None:\n",
+    "                    interaction_values_list.append(interaction_values)\n",
+    "\n",
+    "            if shap_values_list:\n",
+    "                save_json(save_paths[model_name]['sv'], shap_values_list)\n",
+    "            if interaction_values_list:\n",
+    "                save_json(save_paths[model_name]['iv'], interaction_values_list)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# shap_calculator = ShapValuesCalculator(models)\n",
+    "# shap_calculator.process_and_save_shap_values(X_train_list, X_val_list, paths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -139,27 +162,31 @@
     "shap_values = {}\n",
     "shap_interaction_values = {}\n",
     "\n",
+    "def get_mean_absolute_shap_values(values_by_folds):\n",
+    "    # Concatenate sv of each fold into a single list\n",
+    "    concatenated_values = concatenate_lists(values_by_folds)\n",
+    "    # Get mean absolute SHAP values for this model\n",
+    "    mean_absolute_values = np.mean(np.abs(concatenated_values), axis=0)\n",
+    "    return mean_absolute_values\n",
+    "\n",
     "for model_name in MODEL_NAMES:\n",
     "    sv_by_folds = load_json(paths[model_name]['sv'])\n",
-    "\n",
-    "    # Aggregate sv for each fold into a single list of sv\n",
-    "    sv_list = []\n",
-    "    for sv in sv_by_folds:\n",
-    "        sv_list.extend(sv)\n",
-    "    shap_values[model_name] = sv_list\n",
+    "    shap_values[model_name] = get_mean_absolute_shap_values(sv_by_folds)\n",
     "\n",
     "    if os.path.isfile(paths[model_name]['iv']):\n",
     "        iv_by_folds = load_json(paths[model_name]['iv'])\n",
-    "\n",
-    "        # Aggregate iv for each fold into a single list of iv\n",
-    "        iv_list = []\n",
-    "        for iv in iv_by_folds:\n",
-    "            iv_list.extend(iv)\n",
-    "        shap_interaction_values[model_name] = iv_list\n",
+    "        shap_interaction_values[model_name] = get_mean_absolute_shap_values(iv_by_folds)\n",
     "\n",
     "print(shap_values.keys())\n",
     "print(shap_interaction_values.keys())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
