update latest code

--- a/notebooks/predict.ipynb
+++ b/notebooks/predict.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -119,8 +119,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ACC</th>\n",
        "      <th>AUC</th>\n",
+       "      <th>ACC</th>\n",
        "      <th>F1 Score</th>\n",
        "      <th>Precision</th>\n",
        "      <th>Recall</th>\n",
@@ -129,54 +129,54 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>catboost</th>\n",
-       "      <td>0.8791</td>\n",
+       "      <th>CatBoost</th>\n",
        "      <td>0.9312</td>\n",
+       "      <td>0.8791</td>\n",
        "      <td>0.8675</td>\n",
        "      <td>0.8710</td>\n",
        "      <td>0.864</td>\n",
        "      <td>0.8919</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>xgboost</th>\n",
-       "      <td>0.8645</td>\n",
+       "      <th>XGBoost</th>\n",
        "      <td>0.9202</td>\n",
+       "      <td>0.8645</td>\n",
        "      <td>0.8514</td>\n",
        "      <td>0.8548</td>\n",
        "      <td>0.848</td>\n",
        "      <td>0.8784</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>lgbm</th>\n",
-       "      <td>0.8791</td>\n",
+       "      <th>LGBM</th>\n",
        "      <td>0.9150</td>\n",
+       "      <td>0.8791</td>\n",
        "      <td>0.8675</td>\n",
        "      <td>0.8710</td>\n",
        "      <td>0.864</td>\n",
        "      <td>0.8919</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>rf</th>\n",
-       "      <td>0.8388</td>\n",
+       "      <th>RF</th>\n",
        "      <td>0.9097</td>\n",
+       "      <td>0.8388</td>\n",
        "      <td>0.8295</td>\n",
        "      <td>0.8045</td>\n",
        "      <td>0.856</td>\n",
        "      <td>0.8243</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>svm</th>\n",
-       "      <td>0.8168</td>\n",
+       "      <th>SVM</th>\n",
        "      <td>0.8985</td>\n",
+       "      <td>0.8168</td>\n",
        "      <td>0.8031</td>\n",
        "      <td>0.7907</td>\n",
        "      <td>0.816</td>\n",
        "      <td>0.8176</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>lr</th>\n",
-       "      <td>0.8132</td>\n",
+       "      <th>LR</th>\n",
        "      <td>0.8922</td>\n",
+       "      <td>0.8132</td>\n",
        "      <td>0.7935</td>\n",
        "      <td>0.8033</td>\n",
        "      <td>0.784</td>\n",
@@ -187,16 +187,16 @@
        "</div>"
       ],
       "text/plain": [
-       "             ACC     AUC  F1 Score  Precision  Recall  Specificity\n",
-       "catboost  0.8791  0.9312    0.8675     0.8710   0.864       0.8919\n",
-       "xgboost   0.8645  0.9202    0.8514     0.8548   0.848       0.8784\n",
-       "lgbm      0.8791  0.9150    0.8675     0.8710   0.864       0.8919\n",
-       "rf        0.8388  0.9097    0.8295     0.8045   0.856       0.8243\n",
-       "svm       0.8168  0.8985    0.8031     0.7907   0.816       0.8176\n",
-       "lr        0.8132  0.8922    0.7935     0.8033   0.784       0.8378"
+       "             AUC     ACC  F1 Score  Precision  Recall  Specificity\n",
+       "CatBoost  0.9312  0.8791    0.8675     0.8710   0.864       0.8919\n",
+       "XGBoost   0.9202  0.8645    0.8514     0.8548   0.848       0.8784\n",
+       "LGBM      0.9150  0.8791    0.8675     0.8710   0.864       0.8919\n",
+       "RF        0.9097  0.8388    0.8295     0.8045   0.856       0.8243\n",
+       "SVM       0.8985  0.8168    0.8031     0.7907   0.816       0.8176\n",
+       "LR        0.8922  0.8132    0.7935     0.8033   0.784       0.8378"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,9 +205,18 @@
     "metric_df = pd.DataFrame(metric_dict).T\n",
     "metric_df = round(metric_df, 4)\n",
     "metric_df.drop(columns='mse', inplace=True)\n",
-    "metric_df.columns = ['ACC', 'AUC', 'F1 Score', 'Precision', 'Recall', 'Specificity']\n",
+    "metric_df = metric_df[['roc_auc', 'accuracy', 'f1_score', 'precision', 'recall', 'specificity']]\n",
+    "metric_df.columns = ['AUC', 'ACC', 'F1 Score', 'Precision', 'Recall', 'Specificity']\n",
+    "metric_df.index = ['CatBoost', 'XGBoost', 'LGBM', 'RF', 'SVM', 'LR']\n",
     "metric_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
