--- a/notebooks/statistical_test.ipynb
+++ b/notebooks/statistical_test.ipynb
@@ -619,6 +619,9 @@
     "        \n",
     "        # Visualization - Critical Difference (CD) Diagram\n",
     "        plot_cd_diagram(metric_scores, nemenyi_results, metric_names_map[metric_name], axs[idx])\n",
+    "\n",
+    "    # Adjust the space between the subplots\n",
+    "    plt.subplots_adjust(wspace=0.5, hspace=0.5)\n",
     "    \n",
     "    plt.tight_layout()\n",
     "    plt.savefig('../img/critical_difference_plot.jpeg', format='jpeg', dpi=600)\n",
