--- a/notebooks/statistical_test.ipynb
+++ b/notebooks/statistical_test.ipynb
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -949,8 +949,7 @@
     "    # Adjust the space between the subplots and margin of the plot\n",
     "    plt.subplots_adjust(wspace=0.25, hspace=0.25, left=0.05, right=0.95, top=0.95, bottom=0.05)\n",
     "\n",
-    "    #plt.savefig('../img/pairwise_comparison_matrices.jpeg', format='jpeg', dpi=600)\n",
-    "    plt.savefig('../img/figure4.jpg', format='jpg', dpi=600)\n",
+    "    plt.savefig('../img/pairwise_comparison_matrices.jpeg', format='jpeg', dpi=600)\n",
     "    plt.show()\n",
     "\n",
     "def plot_pairwise_comparison_matrix(nemenyi_results, title, ax):\n",
